# heekscad

./: AddIns.txt  CMakeLists.txt  GraphicsCanvas.py  HeeksCAD installer.iss  HeeksCAD.cbp  HeeksCAD.desktop  README-Unix.md  README.Unix  README.md  README.orig.md  autotranslate.py  test.py  translate 1 make from source.bat  translate 3 compile from po to mo.bat  translate_0.sh  translate_1.sh
PyHeeksCAD/: HeeksCAD VC2008.vcproj  (+1 more)
branches/autotools/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  libtool
branches/autotools/interface/: Box.h  GripData.h  HeeksCADInterface.h  InputMode.h  LeftAndRight.h  ObjList.cpp  PropertyCheck.cpp  PropertyDouble.cpp  PropertyLength.cpp  PropertyVertex.cpp  strconv.cpp
branches/autotools/sketchsolve/src/: Derivatives.cpp  errorfuncs.cpp  solveimpl.cpp
branches/autotools/src/: Cone.cpp  Cone.h  ConstrainedObject.h  ConstraintTools.h  ConversionTools.cpp  ConversionTools.h  CorrelationTool.cpp  DimensionDrawing.cpp  Drawing.h  DynamicSolid.cpp  DynamicSolid.h  EndedObject.h  GraphicsCanvas.h  Group.h  HArc.cpp  HArc.h  HCircle.cpp  HLine.h  HPoint.cpp  HeeksCAD.vcproj  HeeksConfig.h  HeeksFrame.h  LineArcDrawing.cpp  Makefile  Makefile.am  Makefile.in  NearMap.h  ObjPropsCanvas.cpp  PointDrawing.cpp  PointOrWindow.cpp  RS274X.cpp  RegularShapesDrawing.cpp  SelectMode.cpp  SelectMode.h  ShapeData.h  Solid.cpp  SolveSketch.cpp  Sphere.h  TransformTool.cpp  TreeCanvas.cpp  (+7 more)
branches/h2cnc/interface/: CMakeLists.txt  GripData.h  HDialogs.h  Material.h  NiceTextCtrl.cpp  NurbSurfaceParams.h  ObjList.cpp  Observer.h  Property.h  PropertyChoice.cpp  PropertyChoice.h  PropertyColor.h  PropertyInt.h  PropertyLength.cpp  PropertyString.cpp  PropertyString.h  Tool.h  ToolImage.h  ToolList.h
branches/h2cnc/translations/: CMakeLists.txt  Makefile.old
branches/h2cnc/translations/de/: HeeksCAD.po
branches/h2cnc/translations/it/: HeeksCAD.po
branches/h2cnc/translations/ko/: HeeksCAD.po
branches/v1_0/tinyxml/: CMakeLists.txt
interface/: Box.h  CMakeLists.txt  CNCPoint.cpp  CNCPoint.h  DoubleInput.cpp  DoubleInput.h  Geom.cpp  Geom.h  GripData.h  GripperTypes.h  HDialogs.cpp  HDialogs.h  HeeksCADInterface.cpp  HeeksCADInterface.h  HeeksColor.cpp  HeeksColor.h  HeeksObj.cpp  HeeksObj.h  HeeksObjDlg.cpp  HeeksObjDlg.h  HeeksSolidInterface.cpp  HeeksSolidInterface.h  IdNamedObj.cpp  IdNamedObj.h  IdNamedObjList.cpp  InputMode.h  LeftAndRight.cpp  LeftAndRight.h  MarkedObject.cpp  MarkedObject.h  Material.h  NiceTextCtrl.cpp  NiceTextCtrl.h  ObjList.cpp  ObjList.h  ObjectCanvas.cpp  ObjectCanvas.h  Observer.h  PToolImage.cpp  PToolImage.h  (+35 more)
src/: AboutBox.cpp  AboutBox.h  AutoSave.cpp  AutoSave.h  BentleyOttmann.cpp  BentleyOttmann.h  BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  Cone.cpp  Cone.h  ConstrainedObject.cpp  ConstrainedObject.h  Constraint.cpp  Constraint.h  ConstraintTools.cpp  ConstraintTools.h  ConversionTools.cpp  ConversionTools.h  CoordinateSystem.cpp  CoordinateSystem.h  CordinateSystem.cpp  CorrelationTool.cpp  CorrelationTool.h  Cuboid.cpp  Cuboid.h  CxfFont.cpp  CxfFont.h  Cylinder.cpp  Cylinder.h  DigitizeMode.cpp  DigitizeMode.h  DigitizedPoint.cpp  DigitizedPoint.h  DimensionDrawing.cpp  DimensionDrawing.h  Drawing.cpp  Drawing.h  DynamicSolid.cpp  DynamicSolid.h  (+220 more)
src/bitmaps/: common.xpm  cube.xpm  cyl.xpm  magextents.xpm  magnorot.xpm  new.xpm  redo.xpm  redraw.xpm  save.xpm  sphere.xpm  subtract.xpm  triangles.xpm
src/icons/: edge.xpm  face.xpm  line.xpm  solid.xpm
tinyxml/: CMakeLists.txt  tinyxml.cpp  tinyxml.h  tinyxml2005.lib  tinyxmlparser.cpp
trunk/: AddIns.txt  CMakeLists.txt  GraphicsCanvas.py  HeeksCAD 0.5.0 installer.iss  HeeksCAD installer.iss  HeeksCAD.cbp  HeeksCAD.desktop  INSTALL_HEEKS.bash  Mouse.py  README.Unix  autotranslate.py  translate 1 make from source.bat  translate 3 compile from po to mo.bat
trunk/PyHeeksCAD/: HeeksCAD VC2008.vcproj  PythonInterface.cpp
trunk/bitmaps/: font.glf
trunk/cmake/Modules/: Findlibarea.cmake
trunk/debian/: changelog  control  heekscad.install  libheekstinyxml0.install  rules
trunk/icons/: HeeksCAD.xpm
trunk/interface/: Box.h  CNCPoint.cpp  DoubleInput.h  Geom.cpp  Geom.h  GripperTypes.h  HDialogs.cpp  HDialogs.h  HeeksCADInterface.cpp  HeeksCADInterface.h  HeeksColor.cpp  HeeksColor.h  HeeksObj.cpp  HeeksObj.h  IdNamedObjList.cpp  IdNamedObjList.h  InputMode.h  LeftAndRight.cpp  MarkedObject.cpp  MarkedObject.h  Material.h  NiceTextCtrl.h  NurbSurfaceParams.h  ObjList.cpp  ObjList.h  ObjectCanvas.h  Observer.h  PictureFrame.cpp  PictureFrame.h  Property.h  PropertyCheck.cpp  PropertyCheck.h  PropertyChoice.cpp  PropertyChoice.h  PropertyColor.cpp  PropertyColor.h  PropertyDouble.cpp  PropertyInt.h  PropertyLength.cpp  PropertyLength.h  (+11 more)
trunk/sketchsolve/src/: CMakeLists.txt  Derivatives.cpp  SolverPointers.cpp  errorfuncs.cpp  solve.cpp  solve.h  solveimpl.cpp  timer.h
trunk/src/: AboutBox.cpp  AutoSave.cpp  AutoSave.h  BentleyOttmann.cpp  BentleyOttmann.h  BezierCurve.cpp  BezierCurve.h  CMakeLists.txt  Cone.cpp  Cone.h  ConstrainedObject.cpp  ConstrainedObject.h  Constraint.cpp  Constraint.h  ConstraintTools.cpp  ConstraintTools.h  ConversionTools.cpp  ConversionTools.h  CoordinateSystem.cpp  CoordinateSystem.h  CorrelationTool.cpp  CorrelationTool.h  Cuboid.cpp  Cuboid.h  CuboidDlg.h  CxfFont.cpp  CxfFont.h  Cylinder.cpp  Cylinder.h  DigitizeMode.cpp  DigitizeMode.h  DigitizedPoint.cpp  DigitizedPoint.h  DimensionDrawing.cpp  DimensionDrawing.h  Drawing.cpp  Drawing.h  Edge.cpp  Edge.h  EndedObject.cpp  (+204 more)
trunk/src/bitmaps/: apply.xpm  cancel.xpm  fuse.xpm  lines.xpm  mag.xpm  open.xpm  tri.xpm  undo.xpm  viewing.xpm
trunk/src/icons/: arc.xpm  stlsolid.xpm  wire.xpm
trunk/tests/: blaugruen.dxf  rotcyan.dxf
trunk/tinyxml/: CMakeLists.txt  tinyxml.cpp  tinyxml.h  tinyxml.lib
trunk/translations/: CMakeLists.txt
trunk/translations/de/: HeeksCAD.po
trunk/translations/es/: HeeksCAD.po
trunk/translations/fr/: HeeksCAD.po
trunk/translations/it/: HeeksCAD.po
trunk/unittest/: Makefile  Polygontest.cpp
(+426 files in other folders)
